// file: proto/gcommon/v1/health/messages/resource_usage.proto
// version: 1.0.0
// guid: 6e7f8091-adb3-8901-5678-234567890123

edition = "2023";

package health.v1;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/health/v1";

/**
 * ResourceUsage represents resource consumption metrics for health monitoring.
 * Tracks system resource utilization for capacity planning and health assessment.
 * Follows 1-1-1 pattern: one message per file.
 */
message ResourceUsage {
  // When these metrics were collected
  google.protobuf.Timestamp collected_at = 1;

  // Service or component name
  string component_name = 2;

  // CPU usage metrics
  CpuUsage cpu = 3;

  // Memory usage metrics
  MemoryUsage memory = 4;

  // Disk usage metrics
  DiskUsage disk = 5;

  // Network usage metrics
  NetworkUsage network = 6;
}

/**
 * CpuUsage represents CPU utilization metrics.
 */
message CpuUsage {
  // CPU usage percentage (0-100)
  double usage_percent = 1;

  // Number of CPU cores
  int32 cores = 2;

  // Load average
  double load_average = 3;
}

/**
 * MemoryUsage represents memory utilization metrics.
 */
message MemoryUsage {
  // Used memory in bytes
  int64 used_bytes = 1;

  // Total available memory in bytes
  int64 total_bytes = 2;

  // Usage percentage (0-100)
  double usage_percent = 3;
}

/**
 * DiskUsage represents disk utilization metrics.
 */
message DiskUsage {
  // Used disk space in bytes
  int64 used_bytes = 1;

  // Total disk space in bytes
  int64 total_bytes = 2;

  // Usage percentage (0-100)
  double usage_percent = 3;
}

/**
 * NetworkUsage represents network utilization metrics.
 */
message NetworkUsage {
  // Bytes received
  int64 bytes_received = 1;

  // Bytes sent
  int64 bytes_sent = 2;

  // Active connections
  int32 active_connections = 3;
}