// file: metrics/proto/messages/deletion_result.proto
// version: 1.0.0
// guid: a612d279-a201-40da-99b2-e6f962d0335f

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "metrics/proto/dry_run_result.proto";
import "pkg/metrics/proto/backup_info.proto";
import "pkg/metrics/proto/dry_run_result.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto";

message DeletionResult {
  // Whether the provider was actually deleted
  bool provider_deleted = 1;

  // Amount of data that was deleted
  int64 data_deleted_bytes = 2;

  // Number of metrics that were deleted
  int64 metrics_deleted = 3;

  // Number of data points that were deleted
  int64 data_points_deleted = 4;

  // Indices that were deleted
  repeated string deleted_indices = 5;

  // Exports that were stopped
  repeated string stopped_exports = 6;

  // Backups that were deleted
  repeated string deleted_backups = 7;

  // Cleanup strategy that was used
  string cleanup_strategy_used = 8;

  // Time taken for the deletion
  string deletion_duration = 9;

  // What would be deleted (for dry run operations)
  DryRunResult dry_run_result = 10;
}
