// file: pkg/metrics/proto/types/provider_info.proto
// version: 1.0.0
// guid: e5f6a7b8-c9d0-1e2f-3a4b-5c6d7e8f9a0b

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/timestamp.proto";
import "pkg/metrics/proto/provider_status.proto";
import "metrics/proto/provider_status.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto";

/**
 * ProviderInfo contains information about a metrics provider.
 */
message ProviderInfo {
  // Unique identifier for the provider
  string provider_id = 1;

  // Human-readable name of the provider
  string name = 2;

  // Provider type (e.g., "prometheus", "datadog", "custom")
  string type = 3;

  // Current status of the provider
  string status = 4;

  // Detailed status information
  ProviderStatus detailed_status = 5;

  // Configuration settings
  map<string, string> config = 6;

  // Version of the provider
  string version = 7;

  // When this provider was created
  google.protobuf.Timestamp created_at = 8;

  // When this provider was last updated
  google.protobuf.Timestamp last_updated = 9;

  // Whether this provider is enabled
  bool enabled = 10;

  // Tags associated with this provider
  repeated string tags = 11;

  // Description of the provider
  string description = 12;
}
