// filepath: pkg/metrics/proto/responses/update_provider_response.proto
// file: metrics/proto/responses/update_provider_response.proto
//
// Update provider response definitions for metrics module
//
edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/common/proto/metrics/proto/metrics/proto/validation_result.proto";
import "pkg/metrics/proto/gcommon/pkg/metrics/proto;metricspb";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * UpdateProviderResponse contains the result of updating a metrics provider.
 */
message UpdateProviderResponse {
  // Success status of the update
  bool success = 1;

  // Error information if update failed
  gcommon.v1.common.Error error = 2;

  // Provider ID that was updated
  string provider_id = 3;

  // When the update was completed
  google.protobuf.Timestamp updated_at = 4;

  // New status of the provider after update
  ProviderStatus status = 5;

  // Update results and changes applied
  UpdateResult update_result = 6;

  // Validation results
  ValidationResult validation = 7;

  // Warnings or informational messages
  repeated string warnings = 8;

  // Backup information (if backup was created)
  BackupInfo backup_info = 9;
}

/**
 * UpdateResult contains information about what was changed.
 */
message UpdateResult {
  // What update action was taken
  UpdateAction action = 1;

  // Configuration changes that were applied
  repeated ConfigChange config_changes = 2;

  // Settings that were updated
  repeated string updated_settings = 3;

  // Settings that were removed
  repeated string removed_settings = 4;

  // Whether a restart occurred
  bool restarted = 5;

  // Update strategy that was used
  string strategy_used = 6;

  // Time taken for the update
  string update_duration = 7;
}

/**
 * UpdateAction indicates what action was taken during the update.
 */
enum UpdateAction {
  UPDATE_ACTION_UNSPECIFIED = 0;
  UPDATE_ACTION_UPDATED = 1;
  UPDATE_ACTION_NO_CHANGE = 2;
  UPDATE_ACTION_RESTARTED = 3;
  UPDATE_ACTION_RECREATED = 4;
}

/**
 * ConfigChange describes a configuration change that was made.
 */
message ConfigChange {
  // Type of change
  ChangeType change_type = 1;

  // Setting that was changed
  string setting_path = 2;

  // Old value (if applicable)
  string old_value = 3;

  // New value
  string new_value = 4;

  // Description of the change
  string description = 5;
}

/**
 * ChangeType defines the type of configuration change.
 */
enum ChangeType {
  CHANGE_TYPE_UNSPECIFIED = 0;
  CHANGE_TYPE_ADDED = 1;
  CHANGE_TYPE_UPDATED = 2;
  CHANGE_TYPE_REMOVED = 3;
  CHANGE_TYPE_REPLACED = 4;
}
