// file: proto/gcommon/v1/metrics/v1/delete_provider_response.proto
// version: 1.0.0
// guid: 0c3bdd9f-3771-4f0b-8c33-24d5a40b6c06

edition = "2023";

package gcommon.v1.metrics;

import "gcommon/v1/common/messages/error.proto";
import "gcommon/v1/metrics/messages/backup_info.proto";
import "gcommon/v1/metrics/messages/deletion_result.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics";

message DeleteProviderResponse {
  // Success status of the deletion
  bool success = 1;

  // Error information if deletion failed
  gcommon.v1.common.Error error = 2;

  // Provider ID that was deleted
  string provider_id = 3;

  // When the deletion was completed
  google.protobuf.Timestamp deleted_at = 4;

  // Deletion results
  DeletionResult deletion_result = 5;

  // Warnings or informational messages
  repeated string warnings = 6;

  // Backup information (if backup was created)
  MetricsBackupInfo backup_info = 7;

  // When scheduled deletion will occur (if grace period is set)
  google.protobuf.Timestamp scheduled_deletion = 8;
}
