// file: proto/gcommon/v1/metrics/v1/provider_endpoints.proto
// version: 1.0.0
// guid: f15d26e3-bb0f-47d8-a4f2-20cbebab5f75

edition = "2023";

package gcommon.v1.metrics.v1;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "proto/gcommon/v1/metrics/types/provider_status.proto";
import "proto/gcommon/v1/metrics/messages/validation_result.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.metrics.v1";

message ProviderEndpoints {
  // Main service endpoint
  string service_endpoint = 1;

  // Metrics endpoint (for scraping)
  string metrics_endpoint = 2;

  // Health check endpoint
  string health_endpoint = 3;

  // Admin/management endpoint
  string admin_endpoint = 4;

  // Additional endpoints
  map<string, string> additional_endpoints = 5;
}
